# IOTAPOC

Did_vc_vp_iota/: Cargo.toml
Did_vc_vp_iota/src/: main.rs
Jwt_Sig_Verifier/: JWT_Sig_Verifier.py
did_resolver/: Cargo.toml
did_resolver/src/: main.rs
